# Eurekan-Refinery

./: .gitignore  CLAUDE .md  SPRINTS.md  STAGE2B_SPRINTS.md  STAGE2_SPRINTS.md  STAGE3_SPRINTS.md  pyproject.toml  ruff.toml
docs/reference/: caps_sulfur_rows.md  sprint_a1_audit.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/stores/: refineryStore.ts  (+1 more)
scripts/diagnostics/: sulfur_trace.py
tests/: test_smoke.py
tests/api/: test_config.py  test_health.py  test_optimize.py  test_scenarios.py  test_services.py  test_sprint5_integration.py  test_stage2_integration.py
tests/integration/: test_alternatives.py  test_diagnostics.py  test_multiperiod.py  test_oracle.py  test_solver.py  test_sprint1.py  test_stage1_final.py  test_stage2b.py  test_sulfur_vs_crude_assay.py
tests/unit/: test_amine.py  test_aromatics_reformer.py  test_blending.py  test_builder.py  test_builder_sprint12.py  test_builder_sprint13.py  test_builder_sprint14.py  test_builder_sprint15.py  test_builder_sprint16.py  test_calibration.py  test_cdu.py  test_coker.py  test_core.py  test_dimersol.py  test_fcc.py  test_fcc_support.py  test_gas_plant.py  test_hydrocracker.py  test_hydrotreater.py  test_isomerization.py  test_naphtha_splitter.py  test_parser.py  test_reformer.py  test_sru.py  test_sulfur_balance.py  test_tail_gas.py  test_vacuum_unit.py
tests/validation/: test_conversion_response.py  test_crude_sensitivity.py  test_fcc_accuracy.py  test_full_validation.py  test_stage3_validation.py
(+81 files in other folders)
