[project]
name = "eurekan-refinery"
version = "0.1.0"
description = "Refinery planning optimizer"
requires-python = ">=3.12"
dependencies = [
    "pyomo>=6.7",
    "cyipopt>=1.4",
    "highspy>=1.7",
    "pydantic>=2.7",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]
notebooks = [
    "jupyterlab>=4.2",
    "matplotlib>=3.9",
    "plotly>=5.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eurekan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
